<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#f2f2f2"
    android:orientation="vertical">

    <include layout="@layout/fragment_title" />

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="#dfdfdf" />

    <TextView

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="36dp"
        android:layout_marginTop="35dp"
        android:text="@string/oldpwd"
        android:textColor="#000"
        android:textSize="15sp" />

    <EditText
        android:id="@+id/old_password"
        android:layout_width="match_parent"
        android:layout_height="36.5dp"
        android:layout_marginEnd="36dp"
        android:layout_marginStart="36dp"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:inputType="textPassword"
        android:maxLines="1"
        android:textColor="#626161"
        android:textSize="15sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="36dp"
        android:layout_marginTop="15dp"
        android:text="@string/newpwd"
        android:textColor="#000"
        android:textSize="15sp" />

    <EditText
        android:id="@+id/new_password"
        android:layout_width="match_parent"
        android:layout_height="36.5dp"
        android:layout_marginEnd="36dp"
        android:layout_marginStart="36dp"
        android:layout_marginTop="15dp"
        android:gravity="center"
        android:inputType="textPassword"
        android:maxLines="1"
        android:textColor="#626161"
        android:textSize="15sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="36dp"
        android:layout_marginTop="15dp"
        android:text="@string/newpwdagain"
        android:textColor="#000"
        android:textSize="15sp" />

    <EditText
        android:id="@+id/confirm_new_password"
        android:layout_width="match_parent"
        android:layout_height="36.5dp"
        android:layout_marginEnd="36dp"
        android:layout_marginStart="36dp"
        android:layout_marginTop="15dp"
        android:gravity="center"
        android:inputType="textPassword"
        android:maxLines="1"
        android:textColor="#626161"
        android:textSize="15sp" />

    <Button
        android:id="@+id/change"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginEnd="36dp"
        android:layout_marginStart="36dp"
        android:layout_marginTop="25dp"
        android:background="@drawable/login_button_bg"
        android:text="@string/changepwd"
        android:textColor="@android:color/white"
        android:textSize="15sp" />
</LinearLayout>