<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/menu_layout"
    android:layout_width="match_parent"
    android:layout_height="50dp"
    android:background="@color/white"
    android:orientation="horizontal">

    <LinearLayout
        android:id="@+id/home_tab"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:padding="1dp"
            android:scaleType="fitCenter"
            android:src="@drawable/selector_home" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/home"
            android:textColor="@drawable/item_home_selector"
            android:textSize="10sp" />
    </LinearLayout>

    <RelativeLayout
        android:id="@+id/shop_tab"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:gravity="center"
        android:visibility="gone">

        <ImageView
            android:id="@+id/shop"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:padding="1dp"
            android:scaleType="fitCenter"
            android:src="@drawable/selector_shop" />

        <TextView
            android:id="@+id/shop_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/shop"
            android:layout_alignLeft="@+id/shop"
            android:layout_alignRight="@+id/shop"
            android:gravity="center"
            android:text="@string/shop"
            android:textColor="@drawable/item_home_selector"
            android:textSize="10sp" />
    </RelativeLayout>

    <LinearLayout
        android:id="@+id/community_tab"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:padding="1dp"
            android:scaleType="fitCenter"
            android:src="@drawable/selector_community" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/community"
            android:textColor="@drawable/item_home_selector"
            android:textSize="10sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/message_tab"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="vertical">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <ImageView
                android:id="@+id/iv_message"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_centerHorizontal="true"
               android:padding="@dimen/dp_1"
                android:layout_marginTop="@dimen/dp_2"
                android:src="@drawable/selector_message" />
            <TextView
                android:id="@+id/newmessage_notify"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="-10dp"
                android:layout_marginTop="1dp"
                android:layout_toEndOf="@+id/iv_message"
                android:background="@drawable/badge_bg"
                android:gravity="center"
                android:textColor="#ffffff"
                android:textSize="@dimen/sp_6"
                android:visibility="gone"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/iv_message"
                android:layout_centerHorizontal="true"
                android:text="@string/message"
                android:textColor="@drawable/item_home_selector"
                android:textSize="10sp" />
        </RelativeLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/person_tab"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:padding="1dp"
            android:scaleType="fitCenter"
            android:src="@drawable/selector_person" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/person"
            android:textColor="@drawable/item_home_selector"
            android:textSize="10sp" />
    </LinearLayout>
</LinearLayout>